Add tests and remove DataSource requirements